--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,23 @@
 		<groupId>org.springframework.boot</groupId>  
 		<artifactId>spring-boot-starter-test</artifactId>  
 		<scope>test</scope>  
-		</dependency>  
+		</dependency> 
+		
+		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+		<dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		    <version>2.0.1.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.dataformat</groupId>
+		    <artifactId>jackson-dataformat-xml</artifactId>
+		    <version>2.13.1</version>
+		</dependency>
+		
+						
+		 
 </dependencies>
 
 	<build>
